@@ -7,7 +7,11 @@ RrdGraph can now take a custom ImageWriter and ImageWriteParam for better contro
 
 The class DataImporter is now public, it allows to define custom importer.
 
-RrdDb are now made using a Builder, because of the explosion of parameters.
+RrdDb are now made using a Builder, because of the explosion of parameters. The builder can also be used to define the use of a pool.
+
+A RrdDb now remember if it was open directly or from the pool, so calling RrdDbPool.release is not needed any more.
+
+The RrdDbPool is not restricted any more to files.
 
 * Fixed Issue 123: Char arrays duplicates with ConsoleFun values in memory.
 * Fixed Issue 124: RRD4j 3.4 increasing number of open files.
